welcome.lessons.welcome.bat.bool1.In1020.scala.error
icyHot:2: error: value or is not a member of Boolean
  if ((temp1 < 0 & temp2 > 100) or (temp1 > 100 & temp2 < 0)) {return true}
                                ^